--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.15.3",
     "swiper": "^6.7.5",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
