--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "danger-notify",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
